[package]
name = "rust-rag-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca = { git = "https://github.com/scrippt-tech/orca", package = "orca-core" }
clap = { version = "4.4.11", features = [] }
serde_json = "1.0.108"
anyhow = { version = "1.0.75", features = [] }
rand = { version = "0.8.5", features = [] }
tokio = "1.35.1"
env_logger = "0.10.1"
